--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
 
   <div class="card">
-    <img src="unnamed.jpg" alt="Profile Photo">
+<img src="profile.jpg" alt="Ibrahim Al-Gazzar">
 
     <h1>Ibrahim Al-Gazzar</h1>
     <h2>Front-End Developer</h2>
@@ -87,3 +87,4 @@
 
 </body>
 </html>
+
