--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Ibrahim Al-Gazzar - Profile Card</title>
   <style>
     body {
@@ -13,7 +13,6 @@
       height: 100vh;
       margin: 0;
     }
-
     .card {
       background-color: white;
       padding: 30px;
@@ -22,30 +21,25 @@
       text-align: center;
       max-width: 350px;
     }
-
     .card img {
       width: 120px;
       height: 120px;
       border-radius: 50%;
       margin-bottom: 15px;
     }
-
     .card h1 {
       margin: 10px 0 5px;
       font-size: 24px;
     }
-
     .card h2 {
       margin: 0;
       font-size: 18px;
       color: #555;
     }
-
     .card p {
       color: #333;
       margin: 15px 0;
     }
-
     .card ul {
       list-style: none;
       padding: 0;
@@ -53,13 +47,11 @@
       justify-content: center;
       gap: 15px;
     }
-
     .card ul li a {
       text-decoration: none;
       color: #0077b5;
       font-weight: bold;
     }
-
     .card ul li a:hover {
       text-decoration: underline;
     }
@@ -68,7 +60,7 @@
 <body>
 
   <div class="card">
-<img src="https://raw.githubusercontent.com/ibrahimAlgazzar/profile-card/main/myphoto.jpg" alt="Ibrahim Al-Gazzar">
+    <img src="https://raw.githubusercontent.com/ibrahimAlgazzar/profile-card/main/myphoto.jpg" alt="Ibrahim Al-Gazzar" />
 
     <h1>Ibrahim Al-Gazzar</h1>
     <h2>Front-End Developer</h2>
@@ -80,14 +72,10 @@
 
     <ul>
       <li><a href="https://www.linkedin.com/in/ibrahim-algazzar-9242b0242" target="_blank">LinkedIn</a></li>
-      <li><a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub</a></li>
+      <li><a href="https://github.com/ibrahimAlgazzar" target="_blank">GitHub</a></li>
       <li><a href="mailto:eng.ibrahim.elgazzar@gmail.com">Email</a></li>
     </ul>
   </div>
 
 </body>
 </html>
-
-
-
-
